attempt to fix janky behaviour on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -426,7 +426,7 @@ section {
 
 .post-cover {
   width: 100%;
-  min-height: 90vh;
+  height: 90vh;
   margin-bottom: 200px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
