--- a/resources/assets/sass/3-sections/_home.sass
+++ b/resources/assets/sass/3-sections/_home.sass
@@ -13,7 +13,7 @@
 
 .post-cover
 	width: 100%
-	min-height: 90vh
+	height: 90vh
 	margin-bottom: 200px
 	+prefixer(background-size, cover, webkit moz ms o spec)
 	background-repeat: no-repeat
